tests/snapshots/cli__run_file@check_eq.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/check_eq.gleam
---
STDOUT

STDERR
warning: Unused private function
  ┌─ /src/check_eq.gleam:3:1
  │
3 │ fn ignore_examples() {
  │ ^^^^^^^^^^^^^^^^^^^^ This private function is never used

Hint: You can safely remove it.

error: Module does not have a main function

`check_eq` does not have a main function so the module can not be run.
Hint: Add a public `main` function to to `src/check_eq.gleam`.
